--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
+    "bootstrap": "^5.3.3",
+    "next": "^14.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.10.2",
+    "react-dom": "18.2.0",
+    "styled-components": "^6.1.11"
   },
   "engines": {
     "node": ">=18"
